Fix saving of png's containing annotations

For some weird reason, the iterator was never increased.

BUG:311694